[package]
name = "bevy-mrp-macos-performance"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { default-features = false, version = "0.11.3", features = [
    "bevy_winit",
    # For tracy / frame debugging
    "bevy_render",
    "bevy_asset",
    "bevy_pbr",
    "ktx2",
    "x11",
    "bevy_core_pipeline",
    "tonemapping_luts",
    "zstd",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
